<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/player"
    android:fillViewport="true"
    android:isScrollContainer="true">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/team_a"
            android:fontFamily="sans-serif"
            android:textColor="#000"
            android:textStyle="bold"
            android:textSize="28sp"
            android:gravity="center_horizontal"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/View_TeamA_Score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textSize="56sp"
            android:textColor="#FFF"
            android:gravity="center_horizontal"
            android:layout_marginBottom="16dp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/teanA_5_points"
            android:textSize="22sp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:onClick="addFivePointsForTeamA"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/teamA_3_points"
            android:textSize="22sp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="20dp"
            android:onClick="addThreePointsForTeamA"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/teamA_2_points"
            android:textSize="22sp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:onClick="addTwoPointsForTeamA"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Team B"
            android:fontFamily="sans-serif"
            android:textColor="#000"
            android:textStyle="bold"
            android:textSize="28sp"
            android:gravity="center_horizontal"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/View_TeamB_Score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="56sp"
            android:textColor="#FFF"
            android:gravity="center_horizontal"
            android:layout_marginBottom="16dp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/teamB_5_points"
            android:textSize="22sp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:onClick="addFivePointsForTeamB"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/teamA_3_points"
            android:textSize="22sp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="20dp"
            android:onClick="addThreePoinstForTeamB"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/teamB_2_points"
            android:textSize="22sp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:onClick="addTwoPointsForTeamB"/>
    </LinearLayout>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/reset"
        android:textSize="22sp"
        android:onClick="resetScoreToZero"/>
</LinearLayout>
</ScrollView>
